--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "astro-format"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
 license = "MIT"
-description = "Astro Format is a library for efficiently encoding and decoding sets of bytes in Astro Format."
+description = "Astro Format is a library for efficiently encoding and decoding a set of bytes into a single buffer format."
 repository = "https://github.com/stelar-labs/rust-astro-format"
 readme = "README.md"
 
