--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "astro-format"
-version = "1.2.0"
+version = "2.0.0"
 edition = "2021"
 license = "MIT"
-description = "Astro Format is a library for transcoding between multiple arrays and a single buffer."
+description = "Astro Format is a library for transcoding between an array of implemented types and a single buffer."
 repository = "https://github.com/stelar-labs/astro-format-rs"
 readme = "README.md"
 
